addd an http request using Auth0 authentication

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
     "angular-auth0": "^3.0.0",
+    "angular-jwt": "^0.1.9",
     "auth0-js": "^9.3.3",
     "bootstrap": "^4.0.0",
     "claer": "^1.0.0",
